# 2DOF_manipulator_ROS

./: CMakeLists.txt  README.md  joint_angles_pub_node.py  manipulator_gui.py  package.xml  parameter_server_node.py  set_lengths_srv_node.py  setup.cfg  setup.py
