<?xml version="1.0"?>
<package format="3">
  <name>manipul_simul_package</name>
  <version>0.0.0</version>
  <description>2DOF robot manipulator package using ROS 2 and Tkinter</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>example_interfaces</depend>
  <depend>manipul_interfaces</depend>

  <exec_depend>launch</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
